# zvec

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/ailego/io/: file.cc
src/binding/: CMakeLists.txt
src/binding/c/: CMakeLists.txt  zvec_c.cc  zvec_c.h
tests/ailego/io/: file_test.cc
tests/db/: collection_test.cc
